# nirmitsu-ros2

./: README.md
.github/workflows/: build.yaml  style.yaml
docs/: workshop.md
install/: local_setup.sh  setup.sh
install/NodeEditor/include/nodes/internal/: DataModelRegistry.hpp  NodeDataModel.hpp
install/NodeEditor/lib/NodeEditor/: calculator  connection_colors  example2  images  styles
install/NodeEditor/share/NodeEditor/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nirmitsu_ros2_flowgraph/lib/nirmitsu_ros2_flowgraph/: nirmitsu
install/nirmitsu_ros2_flowgraph/share/nirmitsu_ros2_flowgraph/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
nirmitsu_ros2_flowgraph/: CMakeLists.txt  package.xml
nirmitsu_ros2_flowgraph/src/: Display.cpp  Display.hpp  DisplayResult.cpp  DisplayResult.hpp  NumberSlider.cpp  NumberSlider.hpp  Robot.cpp  Robot.hpp  RobotWheel.cpp  RobotWheel.hpp  SimplePublisher.cpp  SimplePublisher.hpp  main.cpp
nirmitsu_ros2_flowgraph/src/CustomWidgets/: JoystickWidget.cpp  JoystickWidget.hpp
nirmitsu_ros2_flowgraph/src/datatypes/: BaseNodeData.hpp  BoolData.cpp  BoolData.hpp  DoubleData.cpp  DoubleData.hpp  IntegerData.cpp  IntegerData.hpp  Point2D.cpp  Point2D.hpp  Pos.cpp  Pos.hpp  StringData.cpp  StringData.hpp  WheelData.cpp  WheelData.hpp
nirmitsu_ros2_flowgraph/src/inputs/: Joystick.cpp  Joystick.hpp  NumberSlider.cpp  NumberSlider.hpp  Switch.cpp  Switch.hpp  TextBox.cpp  TextBox.hpp
nirmitsu_ros2_flowgraph/src/outputs/: Display.cpp  Display.hpp
nirmitsu_ros2_flowgraph/src/robot/: Robot.cpp  Robot.hpp  RobotWheel.cpp  RobotWheel.hpp
nirmitsu_ros2_flowgraph/src/widgets/: JoystickWidget.cpp  JoystickWidget.hpp
nodeeditor/: CMakeLists.txt
nodeeditor/examples/calculator/: CMakeLists.txt
nodeeditor/examples/connection_colors/: CMakeLists.txt
nodeeditor/examples/example2/: CMakeLists.txt
nodeeditor/examples/images/: CMakeLists.txt
nodeeditor/examples/styles/: CMakeLists.txt  models.hpp
nodeeditor/include/nodes/internal/: FlowScene.hpp
nodeeditor/src/: Connection.cpp  ConnectionGraphicsObject.cpp  FlowScene.cpp  NodeConnectionInteraction.cpp
scripts/: robot.py
